--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "framework",
     "cypress"
   ],
-
   "author": "Ulrich",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^12.7.0"
+    "cypress": "^12.7.0",
+    "cypress-mochawesome-reporter": "^3.3.0"
   }
 }
