--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+
+    "cy:run": "cypress run --env allure=true",
+    "clean:folders": "rm -R -f allure-report/* && rm -R -f allure-results/*",
+    "tests": "npm run cy:run || npm run aftertest",
+    "allure:report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
+    "aftertest": "npm run allure:report",
+
     "test": "test",
     "cypress:open": "cypress open",
     "cypress:runDefault": "cypress run --spec cypress/integration/examples/*.spec.js",
@@ -21,6 +28,14 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^12.7.0",
-    "cypress-mochawesome-reporter": "^3.3.0"
+    "cypress-mochawesome-reporter": "^3.3.0",
+    "mocha-allure-reporter": "^1.4.0",
+    "@shelex/cypress-allure-plugin": "^2.35.2",
+    "allure-commandline": "^2.21.0"
+  },
+  "dependencies": {
+    "-": "^0.0.1",
+    "save-dev": "^0.0.1-security"
+  
   }
 }
