--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
     "cy:run": "cypress run --env allure=true",
     "clean:folders": "rm -R -f allure-report/* && rm -R -f allure-results/*",
     "tests": "npm run cy:run || npm run aftertest",
     "allure:report": "allure generate allure-results --clean -o allure-report && allure open allure-report",
     "aftertest": "npm run allure:report",
-
     "test": "test",
     "cypress:open": "cypress open",
     "cypress:runDefault": "cypress run --spec cypress/integration/examples/*.spec.js",
@@ -27,15 +25,15 @@
   "author": "Ulrich",
   "license": "ISC",
   "devDependencies": {
+    "@shelex/cypress-allure-plugin": "^2.35.2",
+    "allure-commandline": "^2.21.0",
     "cypress": "^12.7.0",
     "cypress-mochawesome-reporter": "^3.3.0",
-    "mocha-allure-reporter": "^1.4.0",
-    "@shelex/cypress-allure-plugin": "^2.35.2",
-    "allure-commandline": "^2.21.0"
+    "mocha-allure-reporter": "^1.4.0"
   },
   "dependencies": {
     "-": "^0.0.1",
+    "cypress-parallel": "^0.12.0",
     "save-dev": "^0.0.1-security"
-  
   }
 }
